<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Die Lauf-App</string>
   <string name="app_description">Ein Kalorienrechner für LäuferInnen</string>
   <string name="usage">Geben Sie die zurückgelegte Strecke, die benötigte Zeit und Ihre Pausen ein. Die App berechnet daraus Ihre Geschwindigkeit und schätzt die verbrannten Kalorien.</string>
   <string name="action_settings">Settings</string>
   <string name="label_distance">Zurückgelegte Strecke</string>
   <string name="hint_distance">Strecke in Kilometeren</string>
   <string name="label_time">Benötigte Zeit</string>
   <string name="hint_time">Zeit in Minuten</string>
   <string name="label_break">Pausen</string>
   <string name="hint_break">Pausen in Minuten</string>
   <string name="buttonLabel">Zu den Ergebnissen</string>
   <string name="pace">Pace (min/km)</string>
   <string name="calories">Kalorien (kcal)</string>
   <string name="distance">Distanz (km)</string>
</resources>
