<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TextView für Überschrift ("Die Lauf-App") -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <!-- TextView für Untertitel ("Ein Kalorienrechner für LäuferInnen") -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <!-- App-Beschreibung und Anleitung -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:lineHeight="21sp"
            android:text="@string/usage"
            android:textSize="14sp" />

        <!-- UI-Bereich für Eingabe der zurückgelegten Strecke -->
        <!-- Über die weightSum wird der gesamte verfügbare Platz für die Kindelemente definiert -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <!-- Das TextView nutzt 40% des verfügbaren Platzes im Elternelement -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/label_distance"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <!-- Das EditText-Feld nutzt 60% des verfügbaren Platzes im Elternelement -->
            <EditText
                android:id="@+id/distanceInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="60"
                android:hint="@string/hint_distance"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <!-- UI-Bereich für Eingabe der benötigten Zeit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/label_time"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/timeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="60"
                android:hint="@string/hint_time"
                android:inputType="time" />

        </LinearLayout>

        <!-- UI-Bereich für Eingabe der gemachten Pausen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/label_break"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/breakInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="60"
                android:hint="@string/hint_break"
                android:inputType="time" />

        </LinearLayout>

        <Button
            android:id="@+id/statsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/buttonLabel"
            android:textColor="@color/colorBackground" />

    </LinearLayout>

</LinearLayout>